# datavow

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  datavow-decisions-log.md  datavow.yaml  integrate-define-ci.sh  integrate-report.sh  integrate-validate.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
contracts/: example.yaml
examples/: github-action.yml
src/datavow/: __init__.py  cli.py  contract.py  findings.py  odcs.py  reporter.py  validator.py
src/datavow/airflow/: __init__.py
src/datavow/airflow/operators/: __init__.py  datavow_operator.py
src/datavow/connectors/: __init__.py  database.py  dbt.py  dbt_sync.py  file.py
src/datavow/rules/: __init__.py  freshness.py  quality.py  schema.py
src/datavow/schemas/: __init__.py
src/datavow/templates/: report.html.j2  report.md.j2
tests/: test_airflow_operator.py  test_cli.py  test_dbt.py  test_dbt_sync.py  test_define_ci.py  test_odcs.py  test_reporter.py  test_validate.py
tests/fixtures/: customers_contract.yaml  orders_clean.csv  orders_contract.yaml  orders_dirty.csv
