[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datavow"
version = "0.1.0"
description = "A solemn vow on your data. From YAML to verdict."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Ludovic Schmetz" }]
keywords = ["data-contracts", "data-quality", "validation", "duckdb", "odcs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "jinja2>=3.1",
]

[project.scripts]
datavow = "datavow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/datavow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]
