[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datavow"
version = "0.3.1"
description = "A solemn vow on your data. From YAML to verdict."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Ludovic Schmetz" }]
keywords = ["data-contracts", "data-quality", "validation", "duckdb", "odcs", "dbt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "jinja2>=3.1",
    "jsonschema>=4.20",
]

[project.scripts]
datavow = "datavow.cli:app"

[project.urls]
Homepage = "https://github.com/ludovicschmetz-stack/datavow"
Repository = "https://github.com/ludovicschmetz-stack/datavow"
Issues = "https://github.com/ludovicschmetz-stack/datavow/issues"
Changelog = "https://github.com/ludovicschmetz-stack/datavow/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/datavow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
